force-app/main/default/objects/Service_Associe__c/Service_Associe__c.object-meta.xml
<CustomObject>
    <description>Ensemble de services proposés par le Pudo selon le macro-profil affecté. Des services seront pilotables par l’action d’activation ou de désactivation.</description>
    <label>Service associé</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Numéro du Service associé</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services associés</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>