force-app/main/default/objects/Service_Associe__c/fields/Date_de_fin_du_statut__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_du_statut__c</fullName>
    <label>Date de fin du statut</label>
    <type>Date</type>
</CustomField>