force-app/main/default/objects/Service_Associe__c/fields/Etat_du_statut__c.field-meta.xml
<CustomField>
    <fullName>Etat_du_statut__c</fullName>
    <inlineHelpText>Si la modification est temporaire veuillez renseigner la date de fin d&#39;application.</inlineHelpText>
    <label>Etat du statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporaire</fullName>
            </value>
            <value>
                <fullName>Définitif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>