force-app/main/default/objects/Service_Associe__c/fields/Macroprofil__c.field-meta.xml
<CustomField>
    <fullName>Macroprofil__c</fullName>
    <formula>Compte__r.Macroprofil_actuel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macroprofil</label>
    <type>Text</type>
</CustomField>