force-app/main/default/objects/Service_Associe__c/fields/Modifiable__c.field-meta.xml
<CustomField>
    <fullName>Modifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modifiable</label>
    <type>Checkbox</type>
</CustomField>