force-app/main/default/objects/Service_Associe__c/fields/Motif_d_activation_d_sactivation__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_activation_d_sactivation__c</fullName>
    <label>Motif d&#39;activation/désactivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Création d’un relais</fullName>
            </value>
            <value>
                <fullName>Relais en surcharge</fullName>
            </value>
            <value>
                <fullName>Régulation</fullName>
            </value>
            <value>
                <fullName>Autres / Voir commentaire</fullName>
            </value>
            <value>
                <fullName>Concurrence chargeur</fullName>
            </value>
            <value>
                <fullName>Omission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>