force-app/main/default/objects/Service_Associe__c/fields/Nom_du_service_traduit__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_service_traduit__c</fullName>
    <label>Nom du service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_SER</valueSetName>
    </valueSet>
</CustomField>