force-app/main/default/objects/Service_Associe__c/fields/Pudo_Forme__c.field-meta.xml
<CustomField>
    <fullName>Pudo_Forme__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pour préciser si le Pudo a été formé pour fournir ce service.</description>
    <label>Pudo Formé</label>
    <type>Checkbox</type>
</CustomField>