force-app/main/default/objects/Service_Associe__c/fields/Reference_Pudo__c.field-meta.xml
<CustomField>
    <fullName>Reference_Pudo__c</fullName>
    <formula>Compte__r.Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Référence Pudo</label>
    <type>Text</type>
</CustomField>