force-app/main/default/objects/Service_Associe__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Points relais pouvant activer le service</relationshipLabel>
    <relationshipName>Services_associes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>