force-app/main/default/objects/Service_Associe__c/fields/Tech_Desactive__c.field-meta.xml
<CustomField>
    <fullName>Tech_Desactive__c</fullName>
    <formula>Not( Active__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Désactivé</label>
    <type>Checkbox</type>
</CustomField>