force-app/main/default/objects/Service_Associe__c/listViews/PUDO_MP4_avec_NAVETTE.listView-meta.xml
<ListView>
    <fullName>PUDO_MP4_avec_NAVETTE</fullName>
    <columns>NAME</columns>
    <columns>Reference_Pudo__c</columns>
    <columns>Compte__c</columns>
    <columns>Macroprofil__c</columns>
    <columns>Service__c</columns>
    <columns>Active__c</columns>
    <columns>Modifiable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Macroprofil__c</field>
        <operation>equals</operation>
        <value>MP4</value>
    </filters>
    <filters>
        <field>Service__c</field>
        <operation>contains</operation>
        <value>NAVETTE</value>
    </filters>
    <label>PUDO MP4 avec NAVETTE</label>
    <language>fr</language>
</ListView>